# synkti

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GITOPS.md  LICENSE.md  LITEPAPER.md  README.md  VISION.md
.github/workflows/: deploy.yml
crates/: Cargo.toml  simulation_results.json
crates/applications/myelin-orchestrator/: Cargo.toml
crates/applications/myelin-simulation-engine/: Cargo.toml
crates/applications/myelin-visualizer/: Cargo.toml
crates/applications/synkti-orchestrator/: Cargo.toml
crates/applications/synkti-orchestrator/src/: assign.rs  checkpoint.rs  discovery.rs  drain.rs  elb.rs  error.rs  failover.rs  infra.rs  instance.rs  lib.rs  main.rs  migration.rs  monitor.rs  remote.rs  s3_store.rs  vllm.rs
crates/applications/synkti-simulation-engine/: Cargo.toml  README.md
crates/applications/synkti-simulation-engine/examples/: visualize_benchmark_comparison.rs
crates/applications/synkti-simulation-engine/src/: lib.rs  main.rs
crates/applications/synkti-simulation-engine/visualizations/: benchmark_comparison.html  benchmark_savings.html  index.html  naive_vs_optimal_improvement.html  spot_behavior.html
crates/applications/synkti-visualizer/: Cargo.toml
crates/applications/tessera-orchestrator/: Cargo.toml
crates/applications/tessera-simulation-engine/: Cargo.toml  README.md
crates/applications/tessera-simulation-engine/examples/: visualize_spot_behavior.rs
crates/applications/tessera-simulation-engine/src/: lib.rs  main.rs  migration.rs  policies.rs  simulator.rs  types.rs
crates/applications/tessera-simulation-engine/visualizations/: spot_behavior.html
crates/applications/tessera-visualizer/: Cargo.toml
crates/core/myelin-core/: Cargo.toml
crates/core/synkti-core/: Cargo.toml
crates/executors/synkti-ml-executor/: Cargo.toml
crates/executors/synkti-ml-executor/src/: lib.rs
crates/executors/tessera-ml-executor/: Cargo.toml
crates/executors/tessera-ml-executor/src/: lib.rs
crates/interfaces/cloud/aws-provider/: Cargo.toml
crates/interfaces/cloud/cloud-traits/: Cargo.toml
crates/interfaces/cloud/gcp-provider/: Cargo.toml
crates/interfaces/compute/compute-kernels/: Cargo.toml
crates/interfaces/compute/compute-traits/: Cargo.toml
crates/interfaces/compute/myelin-kernels/: Cargo.toml
crates/interfaces/compute/myelin-kernels/src/: main.rs
crates/interfaces/compute/rust-kernels/: Cargo.toml
crates/logic/myelin-greedy-scheduler/: Cargo.toml
crates/logic/myelin-scheduler/: Cargo.toml
crates/logic/synkti-greedy-scheduler/: Cargo.toml
crates/logic/synkti-scheduler/: Cargo.toml
crates/logic/tessera-greedy-scheduler/: Cargo.toml
crates/logic/tessera-scheduler/: Cargo.toml
crates/myelin-spot-manager/: Cargo.toml  Dockerfile
crates/myelin-spot-manager/spot_sentinel/src/: main.rs
crates/nodes/myelin-worker/: Cargo.toml
crates/nodes/spot-sentinel/: Cargo.toml  Dockerfile
crates/nodes/synkti-worker/: Cargo.toml
crates/synkti-agent/: Cargo.toml
crates/synkti-agent/src/: drain.rs  error.rs  main.rs  monitor.rs  vllm.rs
crates/synkti-cli/: Cargo.toml
crates/synkti-cli/src/: main.rs
crates/synkti-cli/src/commands/: mod.rs
crates/synkti-core/: Cargo.toml
crates/synkti-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/synkti-simulation/: Cargo.toml  README.md
crates/synkti-simulation/examples/: visualize_benchmark_comparison.rs  visualize_naive_vs_optimal.rs  visualize_spot_behavior.rs
crates/synkti-simulation/src/: checkpoint.rs  main.rs  migration.rs  spot_data.rs
crates/synkti-simulation/visualizations/: README.md  naive_vs_optimal.html  naive_vs_optimal_cost.html
docs/: benchmark_cost.html  index.html
infra/: .gitignore  README.md  main.tf  outputs.tf  tfplan  user-data.sh  variables.tf  versions.tf
my_spot_serve_workspace/spot_sentinel/: Cargo.toml
my_spot_serve_workspace/spot_sentinel/src/: main.rs
scripts/: bootstrap.sh
