[workspace]
resolver = "3"
members = [

# ===== PHASE 1: Grant Preparation (Active) =====
"applications/tessera-simulation-engine",

# ===== PHASE 2+: Production Components (Excluded - dependencies not ready) =====
# NOTE: These crates require axon/synapse GPU features not yet implemented
# Uncomment after completing Synapse Phase 2 (CUDA) and Axon implementation

# "core/tessera-core",
# "logic/tessera-scheduler",
# "logic/tessera-greedy-scheduler",
# "executors/tessera-ml-executor", # Requires axon + synapse GPU
# "interfaces/cloud/cloud-traits",
# "interfaces/cloud/aws-provider",
# "interfaces/cloud/gcp-provider",
# "interfaces/compute/compute-traits",
# "interfaces/compute/rust-kernels",
# "nodes/tessera-worker",
# "nodes/spot-sentinel",
# "applications/tessera-visualizer",
# "applications/tessera-orchestrator",

]

[workspace.dependencies]
# External consulting portfolio libraries (public SSPL, separate repos)
synapse = { path = "../../synapse" }
axon = { path = "../../axon" }

# Common workspace dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
