[workspace]
resolver = "3"
members = [

# ===== PHASE 1: Grant Preparation (Active) =====
"applications/synkti-simulation-engine",

# ===== PHASE 2+: Production Components (Excluded - dependencies not ready) =====
# NOTE: These crates require axon/synapse GPU features not yet implemented
# Uncomment after completing Synapse Phase 2 (CUDA) and Axon implementation

# "core/synkti-core",
# "logic/synkti-scheduler",
# "logic/synkti-greedy-scheduler",
# "executors/synkti-ml-executor", # Requires axon + synapse GPU
# "interfaces/cloud/cloud-traits",
# "interfaces/cloud/aws-provider",
# "interfaces/cloud/gcp-provider",
# "interfaces/compute/compute-traits",
# "interfaces/compute/rust-kernels",
# "nodes/synkti-worker",
# "nodes/spot-sentinel",
# "applications/synkti-visualizer",
# "applications/synkti-orchestrator",

]

[workspace.dependencies]
# External consulting portfolio libraries (public SSPL, separate repos)
synapse = { path = "../../synapse" }
axon = { path = "../../axon" }

# Common workspace dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
