[[bin]]
name = "synkti-agent"
path = "src/main.rs"

[package]
name = "synkti-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Synkti agent - runs on spot instances, handles monitoring and container lifecycle"

[dependencies]
synkti-core = { path = "../synkti-core" }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Time
chrono = { workspace = true }

# Async
futures = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
