[package]
name = "synkti-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Synkti core types and traits - shared across agent, cli, and fleet"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Async trait
async-trait = { workspace = true }

# Time
chrono = { workspace = true }
