[package]
name = "synkti-simulation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Synkti simulation engine - Kuhn-Munkres migration planning and policy testing"

[[bin]]
name = "synkti-sim"
path = "src/main.rs"

[dependencies]
# Serialization for JSON output
serde = { workspace = true }
serde_json = { workspace = true }

# Random number generation for synthetic data
rand = "0.8"
rand_distr = "0.4"

# CLI argument parsing
clap = { workspace = true }

# Optimal assignment algorithm (Kuhn-Munkres)
pathfinding = "4.12"

# Async runtime (optional, for future use)
tokio = { workspace = true, optional = true }

[dev-dependencies]
# Visualization for examples
plotly = "0.9"

[features]
default = []
async = ["tokio"]
