[[bin]]
name = "synkti"
path = "src/main.rs"

[package]
name = "synkti-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# AWS SDK
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.72"
aws-sdk-s3 = "1.68"
aws-sdk-ssm = "1.60"
aws-sdk-elasticloadbalancingv2 = "1.58"
aws-types = "1.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Kuhn-Munkres algorithm (reuse from simulation engine)
pathfinding = "4.12"

# Async streams
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
