[package]
name = "tessera-simulation-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tessera-sim"
path = "src/main.rs"

[dependencies]
# Serialization for JSON output
serde = { workspace = true }
serde_json = "1.0"

# Random number generation for synthetic data
rand = "0.8"
rand_distr = "0.4"

# Async runtime (optional, for future use)
tokio = { workspace = true, optional = true }

[features]
default = []
async = ["tokio"]
